# DotMatrix

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Install.cmake  Libraries.cmake  README.md  Resources.cmake  Source.cmake  Sources.cmake  sources.cmake
Assets/: Logo.psd  Logo_Playdate.psd
Libraries/PempekAssert/lib/: pempek_assert.cpp
Libraries/glad/: CMakeLists.txt
Libraries/glad/debug/include/glad/: gl.h  glad.h
Libraries/glad/debug/src/: gl.c  glad.c
Libraries/glad/include/glad/: glad.h
Libraries/glad/release/include/glad/: gl.h  glad.h
Libraries/glad/release/src/: gl.c  glad.c
Libraries/glad/src/: glad.c
Libraries/libretro/: libretro.h
Libraries/templog/include/templog/: logging.h  templ_meta.h  type_lists.h
Resources/Playdate/: pdxinfo
Resources/Windows/: DotMatrix.rc  Run-GBC.rc
Resources/macOS/: DotMatrix.icns  Info.plist.in  Run-GBC.icns
Source/: Constants.h.in  Emulator.cpp  Emulator.h  FancyAssert.h  GLIncludes.h  Log.h  Logo.inl  Main.cpp  Pointers.h  UI.cpp  UI.h
Source/Core/: Archive.h  Assert.h  Constants.h.in  Enum.h  Log.cpp  Log.h  Math.h  Pointers.h  RingBuffer.h
Source/DotMatrixCore/Core/: Archive.h  Assert.h  Enum.h  Math.h
Source/DotMatrixCore/GameBoy/: CPU.cpp  CPU.h  Cartridge.cpp  GameBoy.cpp  LCDController.cpp  LCDController.h  MemoryBankController.h  Operations.cpp  Operations.h  SoundController.cpp  SoundController.h
Source/Emulator/: Emulator.cpp  Emulator.h  Logo.inl  Main.cpp
Source/GBC/: Bootstrap.h  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Debug.h  Device.cpp  Device.h  GameBoy.cpp  GameBoy.h  LCDController.cpp  LCDController.h  Memory.cpp  Memory.h  MemoryBankController.cpp  MemoryBankController.h  Operations.cpp  Operations.h  SoundController.cpp  SoundController.h
Source/GameBoy/: CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  GameBoy.cpp  GameBoy.h  LCDController.cpp  LCDController.h  MemoryBankController.cpp  MemoryBankController.h  Operations.cpp  Operations.h  SoundController.cpp  SoundController.h
Source/Platform/Audio/: AudioManager.cpp  AudioManager.h
Source/Platform/Input/: ControllerInputDevice.cpp  ControllerInputDevice.h  InputDevice.h  KeyboardInputDevice.cpp  KeyboardInputDevice.h
Source/Platform/Utils/: IOUtils.cpp  IOUtils.h  MacOSUtils.mm  OSUtils.cpp  OSUtils.h
Source/Platform/Video/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
Source/PlayDate/: PlayDate.cpp
Source/Playdate/: Playdate.cpp
Source/Retro/: Retro.cpp
Source/Test/: CPUTester.cpp  CPUTester.h  Main.cpp  TestMain.cpp
Source/UI/: AfterCoreIncludes.inl  BeforeCoreIncludes.inl  CPUWindow.cpp  CartridgeWindow.cpp  DebuggerWindow.cpp  EmulatorWindow.cpp  JoypadWindow.cpp  LCDControllerWindow.cpp  MemoryWindow.cpp  ScreenWindow.cpp  SoundControllerWindow.cpp  TimerWindow.cpp  UI.cpp  UI.h  UIConfig.h  UIFriend.h
Source/Wrapper/Audio/: AudioManager.cpp  AudioManager.h
Source/Wrapper/Input/: ControllerInputDevice.cpp  ControllerInputDevice.h  InputDevice.h  KeyboardInputDevice.cpp  KeyboardInputDevice.h
Source/Wrapper/Platform/: IOUtils.cpp  IOUtils.h  OSUtils.cpp  OSUtils.h
Source/Wrapper/Video/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
Test/Results/: blargg.csv  mooneye.csv
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/templog/imp/: logging.cpp
dependencies/templog/include/templog/: config.h  tuples.h
resources/osx/: Info.plist.in
source/: Constants.h.in  FancyAssert.h  GLIncludes.h  Log.h  LogHelper.h  Types.h  main.cpp
source/gbc/: Audio.h  Bootstrap.h  CPU.cpp  CPU.h  Cartridge.cpp  Cartridge.h  Debug.h  Device.cpp  Device.h  LCDController.cpp  LCDController.h  Memory.cpp  Memory.h  Operations.h  SoundController.cpp  SoundController.h  Video.h  cpu.cpp
source/test/: CPUTester.cpp  CPUTester.h  TestMain.cpp
source/wrapper/: AudioManager.cpp  AudioManager.h  InputDevice.h  KeyboardInputDevice.h  Mesh.h  Model.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.h
source/wrapper/audio/: AudioManager.cpp  AudioManager.h
source/wrapper/input/: KeyboardInputDevice.cpp
source/wrapper/platform/: IOUtils.cpp  IOUtils.h  OSUtils.cpp  OSUtils.h
source/wrapper/video/: Mesh.cpp  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp
